cleaned up some code and fixed so H1 on profile page is visible

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,7 +14,9 @@ body {
   margin: 0;
   font-family: $main-font-family;
 }
-
+#user-name {
+  color: red;
+}
 main {
   margin-top: 100px;
 }
@@ -32,13 +34,13 @@ main {
   padding: 20px 10px;
   min-height: 110px;
 
-    .logo {
-      position: relative;
-      top: 10px;
-      left: 12px;
-      z-index: 100;
-    }
+  .logo {
+    position: relative;
+    top: 10px;
+    left: 12px;
+    z-index: 100;
   }
+}
 
 // Dropdown meny
 .navigation-icons {
@@ -88,7 +90,7 @@ main {
     margin: 30px auto;
     max-width: 90px;
     &:hover {
-      border-bottom: 3px solid #89A3B3;
+      border-bottom: 3px solid #89a3b3;
     }
   }
   .nav-btn {
@@ -104,7 +106,8 @@ main {
     padding-top: 10px;
     @include list-style;
   }
-  .login-button, .logout-button {
+  .login-button,
+  .logout-button {
     @include input-color-theme(#ecffde, black, #daf3c8, #f4ffec);
     background: $login-btn-color;
     border: 1px solid $border-color-btn;
@@ -113,8 +116,8 @@ main {
     width: 300px;
     font-family: inherit;
   }
-  .logout-button{
-    background: #FFD6AA;
+  .logout-button {
+    background: #ffd6aa;
     border: 1px solid rgb(241, 161, 76);
     &:hover {
       background: rgb(233, 175, 113);
@@ -165,7 +168,7 @@ ul {
       position: relative;
       font-size: 25px;
     }
-    .cart:after{
+    .cart:after {
       position: absolute;
       content: attr(data-count);
       width: 25px;
@@ -216,10 +219,9 @@ ul {
         color: black;
         padding: 0px 10px 10px 10px;
         &:hover {
-          border-bottom: 4px solid #89A3B3;
+          border-bottom: 4px solid #89a3b3;
         }
       }
     }
   }
 }
-
